    are ISO-Latin-1
  - ape: support APE replay gain on remote files
  - read ID3 tags from NFS/SMB
* decoder
  - improved error logging
  - report I/O errors to clients
  - ffmpeg: support ReplayGain and MixRamp
  - ffmpeg: support stream tags
  - gme: add option "accuracy"
  - mad: reduce memory usage while scanning tags
  - mpcdec: read the bit rate
* playlist
  - cue: don't skip pregap
  - embcue: fix last track
  - flac: new plugin which reads the "CUESHEET" metadata block
* output
  - alsa: fix multi-channel order
  - alsa: remove option "use_mmap"
  - alsa: support DSD_U32
  - alsa: disable DoP if it fails
  - jack: reduce CPU usage
  - pulse: set channel map to WAVE-EX
  - recorder: record tags
  - recorder: allow dynamic file names
* mixer
  - null: new plugin
* resampler
  - new block "resampler" in configuration file
    replacing the old "samplerate_converter" setting
  - soxr: allow multi-threaded resampling
* reset song priority on playback
* write database and state file atomically
* always write UTF-8 to the log file.
* remove dependency on GLib
* support libsystemd (instead of the older libsystemd-daemon)
* database
  - proxy: add TCP keepalive option
* update
  - apply .mpdignore matches to subdirectories

ver 0.19.15 (2016/04/30)
* decoder
  - ffmpeg: support FFmpeg 3.0
  - ffmpeg: use as fallback instead of "mad" if no plugin matches
  - opus: support bigger OpusTags packets
* fix more build failures on non-glibc builds due to constexpr Mutex
* fix build failure due to missing include
* fix unit test on Alpha

ver 0.19.14 (2016/03/18)
* decoder
  - dsdiff: fix off-by-one buffer overflow
  - opus: limit tag size to 64 kB
* archive
  - iso9660: fix buffer overflow
* fix quadratic runtime bug in the tag pool
* fix build failures on non-glibc builds due to constexpr Mutex

ver 0.19.13 (2016/02/23)
* tags
  - aiff, riff: fix ID3 chunk padding
* decoder
  - ffmpeg: support the TAK codec
* fix disappearing duration of remote songs during playback